--- a/app/src/main/res/layout/simple_single_list_view.xml
+++ b/app/src/main/res/layout/simple_single_list_view.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/txtView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="Sample Text"
-    android:padding="30px"
-    android:textSize="20dp"/>
+    android:padding="30px">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_launcher_round"/>
+
+    <TextView
+        android:id="@+id/txtView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="30px"
+        android:text="Sample Text"
+        android:textSize="20dp" />
+
+</LinearLayout>
