--- a/app/src/main/res/layout/simple_single_list_view.xml
+++ b/app/src/main/res/layout/simple_single_list_view.xml
@@ -6,16 +6,32 @@
     android:padding="30px">
 
     <ImageView
+        android:id="@+id/imgView"
+        android:layout_width="200px"
+        android:layout_height="200px"
+        android:src="@mipmap/ic_launcher_round"
+        android:layout_marginEnd="10dp"/>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher_round"/>
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txtView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="30px"
-        android:text="Sample Text"
-        android:textSize="20dp" />
+        <TextView
+            android:id="@+id/txtName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sample Text"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/txtDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sample Text"
+            android:textSize="15dp"
+            android:layout_marginTop="5dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
